--- a/assets/css/todo.css
+++ b/assets/css/todo.css
@@ -52,4 +52,19 @@ body {
     height: 24px;
 }
 
+.menu .menu__header__profile label{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background-color: #f4F4F4;
+    border-radius: 5px;
+    box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.2);
+}
+
+.menu .menu__header__profile label input{
+    padding-left: 5%;
+    border: none;
+    background: none;
+
+}
 /* FIM menu - header*/
