--- a/assets/css/todo.css
+++ b/assets/css/todo.css
@@ -7,7 +7,8 @@
 }
 .menu {
     width: var(--menuWidth);
-    border-color: #24ff00  ;
+    border-color: #24ff00;
+    flex-direction: column;
 }
 
 .container {
