--- a/assets/css/todo.css
+++ b/assets/css/todo.css
@@ -68,4 +68,30 @@ body {
     background: none;
 
 }
+
+.menu > .activity ul{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border-bottom: solid 0.5px rgba(100,100,100,0.2);
+}
+
+.menu > .activity ul li{
+    line-height: 50px;
+    display: flex;
+    align-items: center;
+    padding-left: 5%;
+    font-size: 0.9em;
+
+}
+
+.menu > .activity ul li:hover{
+    background-color:rgba(100, 100, 100, 1);
+    color:white;
+    cursor: pointer;
+}
+
+.menu > .activity ul li > svg{
+    margin-right: 10%;
+}
 /* FIM menu - header*/
